changed Google Maps location

--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
 						<div class="contact_address text-left">			
 							<div class="single-contact-info">
 								<i class="icofont-google-map"></i>
-								<p>Address<br /> Kisasi, Kampala</p>
+								<p>Address<br /> Plot 36, Sayuuni Complex, Ntinda-Kisasi Road</p>
 							</div>
 											
 							<div class="single-contact-info">
@@ -788,9 +788,7 @@
 		
 		<!-- START MAP -->
 		<div class="google-map">
-			<iframe width="600" height="450" id="gmap_canvas" src="https://maps.google.com/maps?q=Jaca%20Residence&t=&z=13&ie=UTF8&iwloc=&output=embed" ></iframe>
-
-			
+			<iframe width="600" height="450" id="gmap_canvas" src="https://maps.google.com/maps?q=Plot%2036%2C%20Sayuuni%20Complex&t=&z=13&ie=UTF8&iwloc=&output=embed" ></iframe>
 		</div>
 		<!-- END MAP -->
 		
