--- a/index.html
+++ b/index.html
@@ -428,18 +428,13 @@
 						</div>
 					</div>
 						<div class="partner">
-							<a href="#"><img src="assets/img/partner/1.jpg" alt="image"></a>
-							<a href="#"><img src="assets/img/partner/2.jpg" alt="image"></a>
-							<a href="#"><img src="assets/img/partner/3.jpg" alt="image"></a>
-							<a href="#"><img src="assets/img/partner/4.jpg" alt="image"></a>
-							<a href="#"><img src="assets/img/partner/5.jpg" alt="image"></a>
-							<a href="#"><img src="assets/img/partner/6.jpg" alt="image"></a>
-							<a href="#"><img src="assets/img/partner/1.jpg" alt="image"></a>
-							<a href="#"><img src="assets/img/partner/2.jpg" alt="image"></a>
-							<a href="#"><img src="assets/img/partner/3.jpg" alt="image"></a>
-							<a href="#"><img src="assets/img/partner/4.jpg" alt="image"></a>
-							<a href="#"><img src="assets/img/partner/5.jpg" alt="image"></a>
-							<a href="#"><img src="assets/img/partner/6.jpg" alt="image"></a>
+							<a href="#"><img src="assets/img/partner/partner_1.jpg" alt="umeme_uganda_logo"></a>
+							<a href="#"><img src="assets/img/partner/partner_2.jpg" alt="Ken_TV_logo"></a>
+							<a href="#"><img src="assets/img/partner/partner_3.jpg" alt="Duke_of_Edinburgh_Award_Logo"></a>
+							<a href="#"><img src="assets/img/partner/partner_4.jpg" alt="Zetu_Africa_Logo"></a>
+							<a href="#"><img src="assets/img/partner/partner_5.jpg" alt="Seat_Pack_Logo"></a>
+							<a href="#"><img src="assets/img/partner/partner_6.jpg" alt="Windle_Internation"></a>
+							
 						</div>
 					</div><!-- END COL  -->
 				</div><!--END  ROW  -->
