--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 							</div>
 							<div class="col-sm-3 col-xs-12">
 								<div class="single-choose mb-20">
-									<i class="icofont-world"></i>
+									<i class="icofont-airplane"></i>
 									<h4>4K Aerial Drones</h4>
 									<p>4K aerial drones</p>
 								</div>
@@ -276,7 +276,7 @@
 							
 							<div class="col-sm-3 col-xs-12">
 								<div class="single-choose">
-									<i class="icofont-camera"></i>
+									<i class="icofont-ui-brightness"></i>
 									<h4>LED Lights</h4>
 									<p>Large variety of lights including energy efficient top-end LED lights</p>
 								</div>
@@ -284,7 +284,7 @@
 							
 							<div class="col-sm-3 col-xs-12">
 								<div class="single-choose">
-									<i class="icofont-hour-glass"></i>
+									<i class="icofont-radio-mic"></i>
 									<h4>Sound &amp; Recordings</h4>
 									<p>High fidelity range of wireless microphones, transmitters, receivers and sound recorder</p>
 								</div>
@@ -790,14 +790,14 @@
 		<div class="footer">
 			<div class="container">
 				<div class="row">					
-					<div class="col-md-4">						
+					<div class="col-lg-3">						
 						<div class="footer-widget">	
 							<h3 class="fot-title">About Us</h3>
 							<p>Laten Media is a Professional Video, Photography and Design Consultancy Company in Uganda and the best in the business.</p>			
 						</div>						
 					</div><!--- END COL -->				
 
-					<div class="col-md-4">						
+					<div class="col-lg-3">						
 						<div class="footer-widget">
 							<h3 class="fot-title">Our Services</h3>
 							<ul>
@@ -809,7 +809,7 @@
 						</div>						
 					</div><!--- END COL -->				
 
-					<div class="col-md-4">						
+					<div class="col-lg-3">						
 						<div class="footer-widget">	
 							<h3 class="fot-title">Useful Links</h3>
 							<ul>
@@ -818,7 +818,19 @@
 								<li><a href="#">Our Blog</a></li>
 							</ul>
 						</div>						
-					</div><!--- END COL -->			
+					</div><!--- END COL -->		
+					<div class="col-lg-3">						
+						<div class="footer-widget">	
+							<h3 class="fot-title">News Letter</h3>
+							<p>Sign up to our newsletter and get exclusive offers and news you won't find anywhere else straight to your inbox!</p>
+							<div class="form-group col-md-6">
+								<input type="email" name="email" class="form-control" id="first-email" placeholder="Email" required="required">
+							</div>
+							<div class="actions text-left">
+								<input type="submit" value="Subscribe" name="submit" id="submitButton" class="btn btn-lg btn-contact-bg" title="Submit Your Message!" />
+							</div>
+						</div>						
+					</div><!--- END COL -->		
 				</div><!--- END ROW -->				
 			</div><!--- END CONTAINER -->
 		</div>
