logo and ui element

--- a/index.html
+++ b/index.html
@@ -434,6 +434,8 @@
 							<a href="#"><img src="assets/img/partner/partner_4.jpg" alt="Zetu_Africa_Logo"></a>
 							<a href="#"><img src="assets/img/partner/partner_5.jpg" alt="Seat_Pack_Logo"></a>
 							<a href="#"><img src="assets/img/partner/partner_6.jpg" alt="Windle_Internation"></a>
+							<a href="#"><img src="assets/img/partner/partner_5.jpg" alt="Seat_Pack_Logo"></a>
+							<a href="#"><img src="assets/img/partner/partner_6.jpg" alt="Windle_Internation"></a>
 							
 						</div>
 					</div><!-- END COL  -->
